<resources>
    <string name="app_name">Mov Base</string>

    <!--  bottom navigation  -->
    <string name="title_movie">Movie</string>
    <string name="title_favorite">Favorite</string>

    <!--  dummy  -->
    <string name="image_desc">Poster of Movie</string>
    <string name="dummy_title">The Secret Life of Walter Mitty</string>
    <string name="dummy_overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummy_date">January 01, 2022</string>
    <string name="dummy_rating">7.8</string>

    <!--  detail activity  -->
    <string name="detail_story">Detail Movie</string>

    <!--  button text  -->
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

    <!--  error data  -->
    <string name="error_dialog">Failed to show data\nPlease try again later</string>
    <string name="retry">Retry</string>
</resources>